docs - updated package javadocs